@@ -25,6 +25,7 @@ version <next>:
 - Vulkan H.265 encoder
 - stream specifiers in fftools can now match by stream disposition
 - LCEVC enhancement data exporting in H.26x and MP4/ISOBMFF
+- LCEVC filter
 
 
 version 7.0:
